--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\backend\\app.js"
+            "program": "${CSE341}\\backend\\app.js"
         }
     ]
 }
