--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.16.3",
     "mongodb": "^6.10.0"
